--- a/fish/discus/index.html
+++ b/fish/discus/index.html
@@ -2,13 +2,15 @@
 <html lang="fa-ir">
 <head>
 	<meta charset="utf-8">
-	<title>فروشگاه خرید ماهی و لوازم اکواریوم ماهیفام</title>
+	<title>دیسکاس</title>
 	<link rel="canonical" href="https://www.mahifam.com"/>
 	<meta name='description' content='فروش انواع ماهی های زینتی و اکواریومی آب شیرین و طراحی و ساخت و پیاده سازی اکواریوم های پلنت'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 	<meta name='keywords' content='اکواریوم , ماهی  ,  آب شیرین'>
 	<meta name='author' content='nima bashirzadeh'>
-	<link rel="stylesheet" type="text/css" href="css/mahifam.css">
+		<link rel="stylesheet" type="text/css" href="../../css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="../../css/mahifam.css">
+	<link rel="stylesheet" type="text/css" href="../../css/products.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
@@ -57,47 +59,63 @@
 	</nav>
 </header>
 <section id='section'>
-	<div id='textSlideShow' class='textSlideShow'><p>MahiFam</p></div>
-	<div id='slide' class='slideShow'>
-	<img src="images/slide.jpg" width='100%' height='auto'>
+	<div class='navBox'><a href="#">صفحه اصلی</a><p> | </p><a href="#">ماهی</a><p> | </p><p>دیسکاس ردبول</p></div>
+	<div class='productImg'>
+		<img src="../../images/fish/discus/discus-3.jpg" alt='دیسکاس ردبول'>
 	</div>
-	<div class='shopBox'>
-		<div class='shopBox1'>
-			<p>ماهی آب شیرین</p>
-			<a href="fish/index.html"><img src="images/shopBox1.jpg"></a>
-		</div>
-		<div class='shopBox2'>
-			<p>دارو و غذا</p>
-			<a href="#shop2"><img src="images/shopBox2.jpg"></a>
-		</div>
-		<div class='shopBox3'>
-			<p>لوازم اکواریوم</p>
-			<a href="#shop3"><img src="images/shopBox3.jpg"></a>
-		</div>
-		<div class='shopBox4'>
-			<p>دکور و اکواریوم</p>
-			<a href="#shop4"><img src="images/shopBox4.jpg"></a>
-		</div>
+	<div class='productTags'>
+		<h1>دیسکاس بول داگ</h1>
+		<p>سایز : 5 اینچ</p>
+		<p>رنگ : قرمز</p>
+		<p>ماهی آب شیرین</p>
+		<p>نوع : گوشت خوار</p>
+		<p>قیمت :</p>
+		<del class='productPrePrice'>70000</del>
+		<p class='productPrice'>50000 تومان</p>
+		<button>افزودن به سبد خرید</button>
 	</div>
-	<div class="txtSection">
-		<h1>فروش ماهی های زینتی و لوازم اکواریوم در فروشگاه ماهیفام</h1>
+	<div class='productDescript'>
 		<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می‌باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می‌طلبد تا با نرم‌افزارها شناخت بیشتری را برای طراحان رایانه ای علی‌الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می‌توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساساً مورد استفاده قرار گیرد</p>
 	</div>
-	<div class="imgSection imgSection1">
-	</div>
-	<div class="txtSection">
-		<h2>طراحی و ساخت و پیاده سازی انواع اکواریوم </h2>
-		<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می‌باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می‌طلبد تا با نرم‌افزارها شناخت بیشتری را برای طراحان رایانه ای علی‌الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می‌توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساساً مورد استفاده قرار گیرد</p>
-	</div>
-	<div class="imgSection2">
-		<img src="images/imgsection2.jpg">
-	</div>
-	<div class="txtSection">
-		<h2>طراحی و پیاده سازی اکواریوم پلنت</h2>
-		<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می‌باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می‌طلبد تا با نرم‌افزارها شناخت بیشتری را برای طراحان رایانه ای علی‌الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می‌توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساساً مورد استفاده قرار گیرد</p>
-	</div>
-	<div class="imgSection imgSection3">
-	</div>
+<div class='sliderBox'>
+	<p>محصولات مشابه : </p>
+<div id="jssor_1" class="slider">
+<div data-u="slides" class="slides">
+<div>
+<a href="#fish"><img data-u="image" src="../../images/fish/discus/discus.jpg" /></a>
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-1.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-2.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-3.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-4.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-5.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-6.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-7.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-8.jpg" />
+</div>
+<div>
+<img data-u="image" src="../../images/fish/discus/discus-9.jpg" />
+</div>
+</div>
+<span data-u="arrowleft" class="jssora03l larrow"  data-autocenter="2"></span>
+<span data-u="arrowright" class="jssora03r rarrow" data-autocenter="2"></span>
+</div>
+</div>
 </section>
 <footer>
 		<div class='subscriberText'>
@@ -113,7 +131,7 @@
 			<a href="https://plus.google.com/" title="Google plus" id="google"><i class="fab fa-google-plus-g"></i></a>
 		</div>
 	<div class='fLogo'>
-		<img src="images/logo.svg" width='200px' height='100px' alt='logo'>
+		<img src="../../images/logo.svg" width='200px' height='100px' alt='logo'>
 	</div>
 	<div class='footerBottom'>
 		<div class='linkText'><p>پشتیبانی تیم ماهی فام</p></div>
@@ -125,6 +143,7 @@
 		</div>
 	</div>
 </footer>
-<script type="text/javascript" src="js/mahifam.js"></script>
+<script type="text/javascript" src="../../js/products.js"></script>
+<script type="text/javascript">jssor_1_slider_init();</script>
 </body>
 </html>
